create footer to home page

--- a/src/components/promo/promo.component.less
+++ b/src/components/promo/promo.component.less
@@ -1,6 +1,8 @@
 .promo {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2.5em;
+
   &__title {
     color: @color-white;
     font-family: @font;
