--- a/src/style.less
+++ b/src/style.less
@@ -4,6 +4,7 @@
 @import url("components/films/films.component.less");
 @import url("components/slider/slider.component.less");
 @import url("components/promo/promo.component.less");
+@import url("components/footer/footer.componet.less");
 
 @import url("less/fontawesome.less");
 @import url("less/_variables.less");
