--- a/src/components/filter/filter.component.less
+++ b/src/components/filter/filter.component.less
@@ -14,7 +14,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
-    &:active {
+    &:focus {
       border: none;
     }
   }
