--- a/src/components/slider/slider.component.less
+++ b/src/components/slider/slider.component.less
@@ -4,21 +4,28 @@
 
   &_films {
     flex-direction: column;
-    justify-content: center;
-    width: 100%;
     align-items: center;
   }
 
   &__content {
     display: flex;
     justify-content: center;
-    margin-bottom: 1em;
+    margin-bottom: 0.8em;
+  }
+  &__list {
+    list-style-type: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: baseline;
   }
 
-  &__item {
-    width: 100%;
+  &__link {
+    text-decoration: none;
+  }
+  &__img {
     height: 245px;
-    margin: 0 0.7em;
     border-radius: 25px;
     box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
       5px 5px 15px 5px rgba(0, 0, 0, 0);
@@ -27,10 +34,15 @@
       min-width: 205px;
       height: 265px;
     }
-    &_promo {
+
+    &_small {
       height: 124px;
       min-width: 309px;
     }
+  }
+
+  &__item {
+    margin: 0 0.7em;
   }
   &__navigation {
     display: flex;
