--- a/src/common.less
+++ b/src/common.less
@@ -3,7 +3,7 @@ html {
   display: flex;
 }
 body {
-  background-image: url("assets/home.png");
+  // background-image: url("assets/home.png");
   background-color: #263238;
   background-position: inherit;
   background-repeat: no-repeat;
