tryin to get fonawesome

--- a/webpack trying/src/style.less
+++ b/webpack trying/src/style.less
@@ -5,11 +5,4 @@
 @import url("components/slider/slider.component.less");
 @import url("components/promo/promo.component.less");
 @import url("components/footer/footer.componet.less");
-
-@import url("less/fontawesome.less");
-@import url("less/_variables.less");
-@import url("less/_icons.less");
-@import url("less/solid.less");
-@import url("less/brands.less");
-@import url("variebles.less");
-@import url("components/icon/icon.component.less");
+@import url("../src/variebles.less");
