--- a/webpack/src/details/details-style.less
+++ b/webpack/src/details/details-style.less
@@ -6,3 +6,4 @@
 @import url("components/blocks/blocks.component.less");
 @import url("components/synopsis/synopsis.component.less");
 @import url("components/controll/controll.component.less");
+@import url("components/tabs/tabs.component.less");
