--- a/src/components/filter/filter.component.less
+++ b/src/components/filter/filter.component.less
@@ -13,9 +13,12 @@
     background-color: @color-darkblue;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    color: @color-white;
 
     &:focus {
       border: none;
+      outline: none;
+      color: @color-white;
     }
   }
 
