--- a/src/components/tabs/tabs.component.less
+++ b/src/components/tabs/tabs.component.less
@@ -13,6 +13,7 @@
     color: @color-darkblue;
     font-family: @font;
     position: relative;
+    text-transform: capitalize;
   }
   &__input {
     appearance: none;
