--- a/src/details-style.less
+++ b/src/details-style.less
@@ -1,7 +1,7 @@
-@import url("details-common.less");
-@import url("../components/icon/icon.component.less");
-@import url("components/header/header.component.less");
-@import url("../variebles.less");
+@import url("./less/details-common.less");
+@import url("./components/icon/icon.component.less");
+@import url("components/header/header-details.component.less");
+@import url("./less/variebles.less");
 @import url("components/info/info.component.less");
 @import url("components/blocks/blocks.component.less");
 @import url("components/synopsis/synopsis.component.less");
