--- a/src/style.less
+++ b/src/style.less
@@ -1,6 +1,6 @@
-@import url("../src/variebles.less");
-@import url("common.less");
-@import url("components/user/user.component.less");
+@import url("./less/variebles.less");
+@import url("./less/common.less");
+@import url("components/header/header.component.less");
 @import url("components/filter/filter.component.less");
 @import url("components/films/films.component.less");
 @import url("components/slider/slider.component.less");
