--- a/src/details-style.less
+++ b/src/details-style.less
@@ -7,3 +7,4 @@
 @import url("components/synopsis/synopsis.component.less");
 @import url("components/controll/controll.component.less");
 @import url("components/tabs/tabs.component.less");
+@import url("components/seanses/time.component.less");
