update details page

--- a/src/components/controll/controll.component.less
+++ b/src/components/controll/controll.component.less
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  padding: 0 1.8em 0 2em;
 
   &__button {
     border: none;
