--- a/src/components/header/header-details.component.less
+++ b/src/components/header/header-details.component.less
@@ -1,7 +1,8 @@
-.header {
+.header_details {
   width: 100%;
   display: flex;
   margin: 0 0 2.4em 0.4em;
+  padding: 4.4em 1.8em 1em 2em;
 
   &__title {
     .title();
