--- a/src/components/tabs/tabs.component.less
+++ b/src/components/tabs/tabs.component.less
@@ -1,6 +1,8 @@
 .tabs {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 1.8em 0 2em;
 
   &__select {
     display: flex;
