--- a/src/style.less
+++ b/src/style.less
@@ -6,3 +6,13 @@
 @import url("components/slider/slider.component.less");
 @import url("components/promo/promo.component.less");
 @import url("components/footer/footer.componet.less");
+
+@import url("./components/icon/icon.component.less");
+@import url("components/header/header-details.component.less");
+@import url("./less/variebles.less");
+@import url("components/info/info.component.less");
+@import url("components/blocks/blocks.component.less");
+@import url("components/synopsis/synopsis.component.less");
+@import url("components/controll/controll.component.less");
+@import url("components/tabs/tabs.component.less");
+@import url("components/seanses/time.component.less");
