--- a/src/components/tabs/tabs.component.less
+++ b/src/components/tabs/tabs.component.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 0 1.8em 0 2em;
+  margin-top: 0.58em;
 
   &__select {
     display: flex;
