update tabs, slider, create promo slider

--- a/src/components/seans/seans.component.less
+++ b/src/components/seans/seans.component.less
@@ -1,12 +1,14 @@
-.time {
-  display: flex;
-  margin: 0.9em 0;
-  scroll-snap-align: start;
-  overflow: auto;
-  scroll-behavior: smooth;
-  flex-shrink: 0;
-  width: 100%;
-  scroll-snap-type: x mandatory;
+.seans {
+  &__week {
+    display: flex;
+    margin: 0.9em 0;
+    scroll-snap-align: start;
+    overflow: auto;
+    scroll-behavior: smooth;
+    flex-shrink: 0;
+    width: 100%;
+    scroll-snap-type: x mandatory;
+  }
   &__label {
     color: @color-white;
     border: 1px solid @color-white;
