--- a/src/style.less
+++ b/src/style.less
@@ -15,4 +15,4 @@
 @import url("components/synopsis/synopsis.component.less");
 @import url("components/controll/controll.component.less");
 @import url("components/tabs/tabs.component.less");
-@import url("components/seanses/time.component.less");
+@import url("components/seans/seans.component.less");
