--- a/src/style.less
+++ b/src/style.less
@@ -16,3 +16,4 @@
 @import url("components/controll/controll.component.less");
 @import url("components/tabs/tabs.component.less");
 @import url("components/seans/seans.component.less");
+@import url("./components/results/results.component.less");
